# libsathelper

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  SatHelper.go  SatHelper.i  SatHelper.sln  SatHelper.vcxproj  SatHelper.vcxproj.filters  SatHelper_wrap.cxx  go.mod  tcpclient.cpp
Debug/: makefile  objects.mk  sources.mk  subdir.mk
Debug/src/: subdir.mk
Debug/src/SIMD/: subdir.mk
Debug/src/dsp/: subdir.mk
Release/: makefile  objects.mk  sources.mk  subdir.mk
Release (Static)/: makefile  sources.mk  subdir.mk
Release (Static)/src/: subdir.mk
Release (Static)/src/SIMD/: subdir.mk
Release (Static)/src/dsp/: subdir.mk
Release/src/: subdir.mk
Release/src/dsp/: subdir.mk
cmake/Modules/: CheckCompilerFlags.cmake
debian/: changelog  control  files  rules
gotests/: Correlation_test.go  CostasLoop_test.go  Derandomizer_test.go  DifferentialDecode_test.go  PacketFixer_test.go  ReedSolomon_test.go  Viterbi_test.go  tools.go
includes/: correlator.h  exceptions.h  ipaddress.h  packetfixer.h  reedsolomon.h  sathelper.h  screenmanager.h  socket.h  tcpclient.h  tcpserver.h  tcpsocket.h  tools.h  viterbi27.h
includes/SIMD/: MemoryOp.h  Operations.h
includes/SatHelper/: TermColor.h  circularbuffer.h  configparser.h  correlator.h  exceptions.h  extensions.h  info.h  ipaddress.h  packetfixer.h  sathelper.h  socket.h  tcpclient.h  tcpserver.h  tcpsocket.h  tools.h  udpsocket.h  viterbi27.h
includes/SatHelper/SIMD/: MemoryOp.h  Operations.h
includes/SatHelper/dsp/: agc.h  clockrecovery.h  controlloop.h  costasloop.h  fftwindows.h  filters.h  firfilter.h  firinterpolator.h  firkernel.h  interpolator_taps.h
includes/SatHelper/exceptions/: ClientDisconnectedException.h  NotAllDataSentException.h  SatHelperException.h  SocketAcceptException.h  SocketBindException.h  SocketConnectException.h  SocketErrorException.h  SocketException.h  SocketNotReadyException.h  SocketWriteException.h  ViterbiCreationException.h  WordSizeException.h
includes/dsp/: clockrecovery.h  controlloop.h  costasloop.h  filters.h  firfilter.h  firinterpolator.h  firkernel.h  interpolator_taps.h
includes/exceptions/: ClientDisconnectedException.h  NotAllDataSentException.h  SatHelperException.h  SocketAcceptException.h  SocketBindException.h  SocketConnectException.h  SocketErrorException.h  SocketException.h  SocketNotReadyException.h  SocketWriteException.h  ViterbiCreationException.h  WordSizeException.h
src/: Info.cpp  SatHelper.swigcxx  TermColor.cpp  circularbuffer.cpp  configparser.cpp  correlator.cpp  derandomizer.cpp  differentialencoding.cpp  extensions.cpp  ipaddress.cpp  packetfixer.cpp  reedsolomon.cpp  screenmanager.cpp  socket.cpp  tcpclient.cpp  tcpserver.cpp  udpsocket.cpp  viterbi27.cpp
src/SIMD/: MemoryOp.cpp  Operations.cpp
src/dsp/: clockrecovery.cpp  controlloop.cpp  costasloop.cpp  fftwindows.cpp  filters.cpp  firfilter.cpp  firinterpolator.cpp  firkernel.cpp
swig/go/: SatHelper.swigcxx  maps.i  std_complex.i
swig/python/: SatHelper.i
tests/: BaseTest.h  CMakeLists.txt  CorrelationTest.cpp  CorrelationTest.h  CostasLoopTest.cpp  CostasLoopTest.h  DerandomizerTest.cpp  DerandomizerTest.h  DifferentialEncodingTest.cpp  DifferentialEncodingTest.h  Makefile  PacketFixerTest.cpp  PacketFixerTest.h  ReedSolomonTest.cpp  ReedSolomonTest.h  SIMDTest.cpp  SIMDTest.h  TestFailException.h  ViterbiTest.cpp  ViterbiTest.h  tester.cpp  tests.h
tests/Benchmark/: AGCTest.cpp  AGCTest.h  BaseBenchmark.h  CMakeLists.txt  CorrelationTest.cpp  CorrelationTest.h  CostasLoopTest.cpp  CostasLoopTest.h  FIRTest.cpp  FIRTest.h  ViterbiTest.cpp  ViterbiTest.h
